# elastix_gemm

./: .gitignore  CLAUDE.md  MS2.0_uCode-Single_Row.csv  MS2.0_uCode-Single_Tile.csv  README.md  flash.sh  flash.tcl  install_just.sh
.claude/: settings.local.json
doc/: atu_deep_dive_validation.md  atu_explanation.md
emulator/: CLAUDE.md  GFP_EXPLANATION.md  README.md  calculate_external_memory_layout.py  dot_product_example.py  external_memory_demo.py  inspect_memory.py  pyproject.toml
emulator/src/emulator/: api.py  group_floating_point.py  l31_8b_attn.py  main.py  main_test.py  palettized_gfp_tensor.py  test_palettized_gfp_tensor.py
gemm/: BCV_LATENCY_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  MULTITILE_TEST_STATUS.md  MULTI_TILE_DISPATCH_REFERENCE.md  PINGPONG_IMPLEMENTATION_SUMMARY.md  README.md  REFERENCES.md  RESULT_BUFFER_REFERENCE.md  SINGLE_ROW_PLAN.md  SINGLE_ROW_REFERENCE.md  STATE_TRANSITIONS_REFERENCE.md  build_and_flash.sh  dispatch.py  flash.tcl  hex_rescan_registers.sh  temp.md
gemm_failed/: CHANGELOG.md  SINGLE_ROW_PROGRESS.md  SINGLE_ROW_REFERENCE.md  build_and_flash.sh  hex_rescan_registers.sh
gemm_simple/: CHANGELOG.md  CLAUDE.md  COMMAND_SEQUENCE_CORRECTED.md  DEBUGGING_LOG.md  README.md  STATUS.md  TEST_RESULTS.md  build_and_flash.sh  hex.tcl
hex/: .generate_nv_hex.py.bak  generate_multitile.sh  generate_new.sh  generate_nv_hex.py  golden_B128_C1_V1.hex  golden_B16_C16_V4.hex  golden_B16_C16_V4_2T_emu_NEW.hex  golden_B16_C16_V8.hex  golden_B16_C16_V8_emu_NEW.hex  golden_B16_C8_V2.hex  golden_B16_C8_V2_multitile.hex  golden_B1_C128_V1.hex  (+74 more)
(+2074 files in other folders)
